--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -484,51 +484,76 @@ form#new_session .signup:hover {
   text-decoration: none;
   display: inline;
   float: right;
+  cursor: pointer;
+}
+/* line 272, ../../../app/stylesheets/screen.scss */
+#lists .list span.confirm_delete {
+  cursor: pointer;
+  display: none;
+  background-color: #aaa;
+  font-size: 0.8em;
+  padding: 5px;
+  position: absolute;
+  margin-left: 48px;
+  margin-top: -1px;
+}
+/* line 281, ../../../app/stylesheets/screen.scss */
+#lists .list span.confirm_delete a {
+  color: #fff;
+  text-decoration: none;
+}
+/* line 286, ../../../app/stylesheets/screen.scss */
+#lists .list span.confirm_delete a.cancel:hover {
+  color: #CCFFFF;
+}
+/* line 287, ../../../app/stylesheets/screen.scss */
+#lists .list span.confirm_delete a.proceed:hover {
+  color: #FFCCCC;
 }
 
-/* line 275, ../../../app/stylesheets/screen.scss */
+/* line 294, ../../../app/stylesheets/screen.scss */
 #list #info {
   text-align: center;
   margin: 11px 0 28px 0;
 }
-/* line 278, ../../../app/stylesheets/screen.scss */
+/* line 297, ../../../app/stylesheets/screen.scss */
 #list #info #name {
   font-size: 1.5em;
   font-weight: bold;
   text-decoration: none;
 }
-/* line 284, ../../../app/stylesheets/screen.scss */
+/* line 303, ../../../app/stylesheets/screen.scss */
 #list #info form input[type="text"] {
   margin: 0 auto 0 auto;
   width: 300px;
 }
-/* line 288, ../../../app/stylesheets/screen.scss */
+/* line 307, ../../../app/stylesheets/screen.scss */
 #list #info form .loader {
   padding: 8px;
   position: absolute;
   visibility: hidden;
 }
-/* line 295, ../../../app/stylesheets/screen.scss */
+/* line 314, ../../../app/stylesheets/screen.scss */
 #list form#new_item {
   text-align: center;
   margin: 32px 0 25px 0;
 }
-/* line 299, ../../../app/stylesheets/screen.scss */
+/* line 318, ../../../app/stylesheets/screen.scss */
 #list form#new_item .fields #item_body {
   width: 300px;
   margin-right: 11px;
 }
-/* line 300, ../../../app/stylesheets/screen.scss */
+/* line 319, ../../../app/stylesheets/screen.scss */
 #list form#new_item .fields input[type="submit"] {
   width: 80px;
 }
-/* line 302, ../../../app/stylesheets/screen.scss */
+/* line 321, ../../../app/stylesheets/screen.scss */
 #list form#new_item .loader {
   margin: 8px 0 8px 3px;
   position: absolute;
   visibility: hidden;
 }
-/* line 309, ../../../app/stylesheets/screen.scss */
+/* line 328, ../../../app/stylesheets/screen.scss */
 #list .items .item {
   overflow: hidden;
   display: inline-block;
@@ -548,22 +573,22 @@ form#new_session .signup:hover {
 #list .items .item {
   display: block;
 }
-/* line 317, ../../../app/stylesheets/screen.scss */
+/* line 336, ../../../app/stylesheets/screen.scss */
 #list .items .item:active {
   cursor: url(/images/grabbing.png), default;
 }
-/* line 318, ../../../app/stylesheets/screen.scss */
+/* line 337, ../../../app/stylesheets/screen.scss */
 #list .items .item:hover {
   background-color: #e3e3e3;
 }
-/* line 319, ../../../app/stylesheets/screen.scss */
+/* line 338, ../../../app/stylesheets/screen.scss */
 #list .items .item .checkbox_wrapper {
   display: inline;
   float: left;
   padding: 11px;
   cursor: default;
 }
-/* line 324, ../../../app/stylesheets/screen.scss */
+/* line 343, ../../../app/stylesheets/screen.scss */
 #list .items .item .body {
   padding: 10px 0 8px 0;
   display: inline;
@@ -571,7 +596,7 @@ form#new_session .signup:hover {
   width: 388px;
   line-height: 1.8em;
 }
-/* line 330, ../../../app/stylesheets/screen.scss */
+/* line 349, ../../../app/stylesheets/screen.scss */
 #list .items .item input.item_body {
   display: inline;
   float: left;
@@ -579,19 +604,23 @@ form#new_session .signup:hover {
   padding: 0px;
   margin: 12px 0 12px 0;
 }
-/* line 336, ../../../app/stylesheets/screen.scss */
+/* line 355, ../../../app/stylesheets/screen.scss */
 #list .items .item .loader {
   display: inline;
   float: left;
   margin: 12px 0px 12px 12px;
   visibility: hidden;
 }
-/* line 341, ../../../app/stylesheets/screen.scss */
+/* line 360, ../../../app/stylesheets/screen.scss */
 #list .items .item .delete_wrapper {
   display: inline;
   float: right;
 }
-/* line 343, ../../../app/stylesheets/screen.scss */
+/* line 362, ../../../app/stylesheets/screen.scss */
+#list .items .item .delete_wrapper a {
+  cursor: pointer;
+}
+/* line 363, ../../../app/stylesheets/screen.scss */
 #list .items .item .delete_wrapper .confirm {
   -moz-border-radius-topright: 3px;
   -webkit-border-top-right-radius: 3px;
@@ -608,21 +637,25 @@ form#new_session .signup:hover {
   display: none;
   position: absolute;
   margin-top: 8px;
-  margin-left: 32px;
+  margin-left: 33px;
   padding: 5px 8px 5px 8px;
   background-color: #aaa;
 }
-/* line 352, ../../../app/stylesheets/screen.scss */
+/* line 372, ../../../app/stylesheets/screen.scss */
 #list .items .item .delete_wrapper .confirm a {
   padding: 5px 0 6px 0;
   color: #fff;
   text-decoration: none;
 }
-/* line 356, ../../../app/stylesheets/screen.scss */
-#list .items .item .delete_wrapper .confirm a:hover {
-  color: #F0E68C;
+/* line 377, ../../../app/stylesheets/screen.scss */
+#list .items .item .delete_wrapper .confirm a.cancel:hover {
+  color: #CCFFFF;
 }
-/* line 359, ../../../app/stylesheets/screen.scss */
+/* line 378, ../../../app/stylesheets/screen.scss */
+#list .items .item .delete_wrapper .confirm a.proceed:hover {
+  color: #FFCCCC;
+}
+/* line 380, ../../../app/stylesheets/screen.scss */
 #list .items .item .delete_wrapper .delete.button {
   display: inline;
   float: right;
@@ -630,16 +663,16 @@ form#new_session .signup:hover {
   text-decoration: none;
   color: #aaa;
 }
-/* line 364, ../../../app/stylesheets/screen.scss */
+/* line 385, ../../../app/stylesheets/screen.scss */
 #list .items .item .delete_wrapper .delete.button:hover {
   color: #c60;
 }
-/* line 368, ../../../app/stylesheets/screen.scss */
+/* line 389, ../../../app/stylesheets/screen.scss */
 #list .items .item.complete {
   background-color: #eee;
   color: #aaa;
 }
-/* line 371, ../../../app/stylesheets/screen.scss */
+/* line 392, ../../../app/stylesheets/screen.scss */
 #list .items .item.complete .delete.button {
   -moz-opacity: 0.8;
   -webkit-opacity: 0.8;
@@ -649,7 +682,7 @@ form#new_session .signup:hover {
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
 }
-/* line 371, ../../../app/stylesheets/screen.scss */
+/* line 392, ../../../app/stylesheets/screen.scss */
 #list .items .item.complete .delete.button:hover {
   -moz-opacity: 0.8;
   -webkit-opacity: 0.8;
@@ -659,7 +692,7 @@ form#new_session .signup:hover {
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
 }
-/* line 375, ../../../app/stylesheets/screen.scss */
+/* line 396, ../../../app/stylesheets/screen.scss */
 #list #completed_items .item {
   cursor: default;
 }
