--- a/app/views/lists/_item.html.haml
+++ b/app/views/lists/_item.html.haml
@@ -1,4 +1,5 @@
-.item{:id => item.id, :class => "#{'complete' if item.complete}"}
+-hidden ||= false
+.item{:id => item.id, :class => "#{'complete' if item.complete}", :style => "#{'display:none' if hidden}"}
   .checkbox_wrapper
     =check_box_tag "item[complete]", "1", item.complete, :class => "item_complete"
   .body(title="double-click to edit")
@@ -9,8 +10,8 @@
   
   .delete_wrapper
     =#link_to 'x', list_item_path(@list, item), :method => :delete, :confirm => 'Delete this item?', :class => 'delete button', :title => "delete"
-    %a.delete.button(href="#" title="delete") x
+    %a.delete.button(title="delete") x
     %span.confirm
-      %a.cancel(href="#") cancel 
-      %a.proceed(href="#") delete
+      %a.cancel() cancel 
+      %a.proceed() delete
     =#link_to image_tag("delete_lite.png"), list_item_path(@list, item), :method => :delete, :confirm => 'Delete this item?', :class => 'delete button', :title => "delete"
