--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -112,7 +112,7 @@
         new_item_body.val('');
         bindNewItem($("#items .item:last"));
         loader.css("visibility", "hidden");
-        $("#items .item:last").slideDown(500);
+        $("#items .item:last").show(); //slideDown(500);
       });
     });
     
