Changed tag line to 'darn-simple todo lists'

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -145,9 +145,9 @@ input[type="button"], input[type="submit"] {
     .pitch {
   //    font-weight: bold;
       list-style: square;
-      font-family: 'courier';
+      //font-family: 'courier';
       color: #888;
-      font-size: 1em;
+      font-size: 1.08em;
       line-height: 1.5em;
   //    list-style: square;
       margin-left: 50px;
