Changed tagline font to courier

--- a/app/views/session/new.html.haml
+++ b/app/views/session/new.html.haml
@@ -12,8 +12,8 @@
       %span.baz>< -
       \---
 
-    %ul.pitch
-      darn-simple todo lists
+    .pitch
+      Darn-simple todo lists
 
 
 -if flash[:login_error]
