--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -145,12 +145,11 @@ input[type="button"], input[type="submit"] {
     .pitch {
   //    font-weight: bold;
       list-style: square;
-      //font-family: 'courier';
+      font-family: 'courier';
       color: #888;
-      font-size: 1.08em;
+      font-size: 0.95em;
       line-height: 1.5em;
-  //    list-style: square;
-      margin-left: 50px;
+      margin-top: 8px;
     }
   }
 }
